<resources>
    <string name="app_name">FinalProject</string>
    <string name="add_new_task">Add New Task</string>
    <string name="no_tasks_here_tap_to_get_started">No tasks here. Tap + to get started!</string>
    <string name="more_menu_button">more menu button</string>
    <string name="task_title_here">Task Title Here</string>
    <string name="pending">⏳ Pending</string>
    <string name="fill_with_long_task_description">Fill With Long Task Description</string>
    <string name="description">Description</string>
    <string name="high_priority">High Priority</string>
    <string name="category_kuliah">Category: School</string>
    <string name="_12_dec_2025_10_00">12 Dec 2025, 10:00</string>
    <string name="back_button">Back Button</string>
    <string name="more_options">More Options</string>
    <string name="smart_task">Smart To-Do List</string>
    <string name="open_ai_chat">Open AI Chat</string>
    <string name="send">Send</string>
    <string name="paste_your_task_here">Paste your task here...</string>
    <string name="smart_assistant">Smart Assistant</string>

    <string-array name="importance_levels">
        <item>1 - Very Low</item>
        <item>2 - Low</item>
        <item>3 - Medium</item>
        <item>4 - High</item>
        <item>5 - Urgent</item>
    </string-array>

    <string-array name="category_options">
        <item>General</item>
        <item>School</item>
        <item>Work</item>
    </string-array>

    <string-array name="status_options">
        <item>Pending</item>
        <item>Done</item>
    </string-array>

</resources>